# TANUKI

./: .clinerules  .dockerignore  .env.example  .gitignore  BonsaiModelfile  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  MCP_CONNECTION_GUIDE.md  OSS_RELEASE_CHECKLIST.md  README.md  Whitepaper.md  check_content.py  check_db.py  check_file.py  check_meta.py  check_one.py  check_sonicether.py  check_titles.py  clean_all.py  clean_one.py  docker-compose.yml  generate_song_index.py  launch_tanuki_mcp.ps1  populate_clusters.py  register_slicer.py  run_tests.py  tanuki_config.py  tanuki_mcp_adapter.py  tanuki_mcp_bridge.py  tanuki_todo.py  test.md  「TANUKI知識ベースエンジン」のOSS化.md  開発日誌.md
.github/workflows/: ci.yml
Images/2026-04-01_SonicEther_Distillation.png) --- ## 🛠 実施した主な変更/: INDEX.md
config/: models_config.json
docs/: AGENT_IRMINSUL_NAV.md  AUTOMATION_PIPELINE.md  INSTALL.md  KNOWLEDGE_BASE_LIMITATIONS.md
documents/: AGENT_SPECS_INDEX.md  sample_features.md  sample_overview.md
documents/specs/: README.md  TLAP_SPEC_AND_PROTOTYPE.md (Security & Compartment Upgraded v1.1).md
scripts/: drive_to_tanuki.ps1  drive_to_tanuki.sh  sync_kb_to_factory.ps1
sdk/: setup.py
sdk/tanuki/: __init__.py  client.py
sdk/tanuki.egg-info/: PKG-INFO  SOURCES.txt
sdk/tests/: test_sdk.py
tanuki-compiler/: Cargo.toml
tanuki-compiler/config/: models_config.json
tanuki-compiler/src/: lib.rs  main.rs
tanuki-compiler/src/backend/: mod.rs  packing.rs  tree_gen.rs
tanuki-compiler/src/frontend/: ast.rs  markdown.ebnf  mod.rs  parser.rs  tokenizer.rs
tanuki-compiler/src/middle/: evaluator.rs  mod.rs  reducer.rs
tanuki-core/: Cargo.toml  PROMOTION.md  README.md
tanuki-core/src/: checkpoint.rs  db.rs  flat_ast.rs  lib.rs  llm.rs  mmap_memory.rs  vram.rs
tanuki-core/src/schema/: TanukiMemory.fbs  mod.rs  tanuki_memory_generated.rs
tanuki-py/: Cargo.toml  pyproject.toml
tanuki-py/src/: lib.rs
tanuki-serving/: Cargo.toml
tanuki-serving/src/: lib.rs  main.rs
tanuki-ui/: index.html  style.css
