[workspace]
members = [
    "tanuki-core",
    "tanuki-compiler",
    "tanuki-serving",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
lazy_static = "1.4"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
utoipa = { version = "3.5", features = ["axum_extras"] }
unicode-normalization = "0.1.24"
flatbuffers = "23.5.26"
memmap2 = "0.9"
arc-swap = "1.6"
