[package]
name = "tanuki-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tanuki-core = { path = "../tanuki-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = "1.9"
walkdir = "2.3"
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
unicode-normalization = { workspace = true }
